applying multi-tenancy to task, deploy, predict
Signed-off-by: Dhrubo Saha <dhrubo@amazon.com>